--- a/services/pom.xml
+++ b/services/pom.xml
@@ -112,6 +112,11 @@
 			<scope>test</scope>
 		</dependency>
         <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>8.4.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.jetbrains</groupId>
             <artifactId>annotations</artifactId>
             <version>RELEASE</version>
