--- a/services/pom.xml
+++ b/services/pom.xml
@@ -5,7 +5,7 @@
 		<groupId>com.codexmaker.demandeconge</groupId>
 		<artifactId>demande-conge-extention</artifactId>
 		<version>1.0-SNAPSHOT</version>
-		<relativePath>../pom.xml</relativePath> <!-- Ajustez selon la structure -->
+		<relativePath>../pom.xml</relativePath>
 	</parent>
 
 	<artifactId>demande-conge-extention-services</artifactId>
