Fin de l'implementation du controller

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 # Java / Maven (multi-module)
 # ===========================
 target/
+allure-results/
 */target/
 !.mvn/wrapper/maven-wrapper.jar
 !.mvn/wrapper/maven-wrapper.properties
