--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,7 @@
                 <enabled>true</enabled>
             </releases>
             <snapshots>
-                <enabled>true</enabled> <!-- Activer pour versions milestone/snapshot comme 17-M02 -->
+                <enabled>true</enabled>
             </snapshots>
         </repository>
     </repositories>
