--- a/services/pom.xml
+++ b/services/pom.xml
@@ -125,8 +125,23 @@
         <dependency>
             <groupId>io.qameta.allure</groupId>
             <artifactId>allure-junit5</artifactId>
-            <version>2.25.0</version>
+            <version>2.29.1</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-plugin-api</artifactId>
+            <version>2.34.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.maven.doxia</groupId>
+            <artifactId>doxia-site-renderer</artifactId>
+            <version>1.11.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-site-plugin</artifactId>
+            <version>4.0.0-M16</version>
         </dependency>
     </dependencies>
     <build>
@@ -136,7 +151,8 @@
                 <artifactId>allure-maven</artifactId>
                 <version>2.13.0</version>
                 <configuration>
-                    <reportVersion>2.25.0</reportVersion>
+                    <reportVersion>2.29.1</reportVersion>
+                    <resultsDirectory>${project.build.directory}/allure-results</resultsDirectory>
                 </configuration>
             </plugin>
             <plugin>
@@ -165,4 +181,5 @@
             </plugin>
         </plugins>
     </build>
+    <repositories><repository><id>central</id><url>https://repo.maven.apache.org/maven2</url></repository></repositories>
 </project>
