--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     </parent>
 
     <groupId>com.codexmaker.demandeconge</groupId>
-    <artifactId>demande-conge-extention</artifactId>
+    <artifactId>demande-conge-extension</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <packaging>pom</packaging>
@@ -24,7 +24,7 @@
         <module>webapp</module>
     </modules>
 
-    <name>demande-conge-extention</name>
+    <name>demande-conge-extension</name>
     <url>http://www.example.com</url>
 
     <properties>
@@ -41,5 +41,12 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+
+    <repositories>
+        <repository>
+            <id>exo-public</id>
+            <url>https://repository.exoplatform.org/public/</url>
+        </repository>
+    </repositories>
 
 </project>
