--- a/services/pom.xml
+++ b/services/pom.xml
@@ -3,14 +3,14 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.codexmaker.demandeconge</groupId>
-		<artifactId>demande-conge-extention</artifactId>
+		<artifactId>demande-conge-extension</artifactId>
 		<version>1.0-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
-	<artifactId>demande-conge-extention-services</artifactId>
+	<artifactId>demande-conge-extension-services</artifactId>
 
-	<name>demande-conge-extention-services</name>
+	<name>demande-conge-extension-services</name>
 	<url>http://www.example.com</url>
 
 	<properties>
@@ -147,7 +147,7 @@
         </dependency>
     </dependencies>
     <build>
-        <finalName>demande-conge-extention-services</finalName>
+        <finalName>demande-conge-extension-services</finalName>
         <plugins>
             <plugin>
                 <groupId>io.qameta.allure</groupId>
