--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -4,17 +4,17 @@
 
     <parent>
         <groupId>com.codexmaker.demandeconge</groupId>
-        <artifactId>demande-conge-extention</artifactId>
+        <artifactId>demande-conge-extension</artifactId>
         <version>1.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>emande-conge-extention-webapp</artifactId>
+    <artifactId>emande-conge-extension-webapp</artifactId>
     <packaging>war</packaging>
-    <name>demande-conge-extention-webapp</name>
+    <name>demande-conge-extension-webapp</name>
 
     <build>
-        <finalName>demande-conge-extention-webapp</finalName>
+        <finalName>demande-conge-extension-webapp</finalName>
         <resources>
             <resource>
                 <directory>src/main/webapp</directory>
