--- a/services/pom.xml
+++ b/services/pom.xml
@@ -127,6 +127,11 @@
             <artifactId>doxia-site-renderer</artifactId>
             <version>2.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>2.15.2</version> <!-- Utilise la version qui correspond à ta version de Jackson -->
+        </dependency>
 
         <!-- Allre junit -->
         <dependency>
