--- a/services/pom.xml
+++ b/services/pom.xml
@@ -55,6 +55,11 @@
 			<artifactId>exo.social.component.core</artifactId>
 			<version>1.2.9</version>
 		</dependency>
+        <dependency>
+            <groupId>javax.ejb</groupId>
+            <artifactId>javax.ejb-api</artifactId>
+            <version>3.2.2</version>
+        </dependency>
 		<dependency>
 			<groupId>javax.portlet</groupId>
 			<artifactId>portlet-api</artifactId>
