--- a/webapp/package.json
+++ b/webapp/package.json
@@ -7,30 +7,35 @@
     "url": "https://github.com/exo-samples/docs-samples"
   },
   "scripts": {
+    "dev": "vite",
     "watch": "webpack --config webpack.watch.js --progress --color --watch",
     "lint": "eslint --fix \"./src/main/webapp/vue-app/**\"",
     "eslint-check": "eslint  \"./src/main/webapp/vue-app/**\"",
-    "build": "webpack --config webpack.prod.js --mode production"
+    "build": "webpack --config webpack.prod.js --mode production",
+    "preview": "vite preview"
   },
   "author": "eXo",
   "license": "LGPL",
   "devDependencies": {
-    "babel-loader": "^8.2.4",
-    "css-loader": "^7.1.2",
-    "eslint": "^8.12.0",
-    "eslint-config-meedsio": "^1.0.4",
-    "eslint-plugin-vue": "^8.6.0",
+    "@vitejs/plugin-vue": "^6.0.4",
+    "babel-loader": "^10.0.0",
+    "css-loader": "^7.1.3",
+    "eslint": "^10.0.0",
+    "eslint-config-meedsio": "^1.0.5",
+    "eslint-plugin-vue": "^10.7.0",
     "eslint-plugin-vuejs-accessibility": "^2.4.1",
-    "eslint-webpack-plugin": "^3.1.1",
+    "eslint-webpack-plugin": "^5.0.2",
     "style-loader": "^4.0.0",
-    "vue": "^2.6.14",
-    "vue-loader": "^15.11.1",
+    "vite": "^7.3.1",
+    "vue": "^3.5.28",
+    "vue-loader": "^17.4.2",
     "vue-template-compiler": "^2.7.16",
-    "webpack": "^5.72.0",
-    "webpack-cli": "^4.9.2",
-    "webpack-merge": "^5.8.0"
+    "webpack": "^5.105.0",
+    "webpack-cli": "^6.0.1",
+    "webpack-merge": "^6.0.1"
   },
   "dependencies": {
-    "axios": "^1.11.0"
+    "axios": "^1.13.5",
+    "vue-router": "^5.0.2"
   }
 }
