--- a/webapp/package.json
+++ b/webapp/package.json
@@ -20,9 +20,10 @@
     "@vitejs/plugin-vue": "^6.0.4",
     "babel-loader": "^10.0.0",
     "css-loader": "^7.1.3",
-    "eslint": "^10.0.0",
-    "eslint-config-meedsio": "^1.0.5",
+    "eslint": "^9.0.0",
     "eslint-plugin-vue": "^10.7.0",
+    "vue-eslint-parser": "^10.0.0",
+    "eslint-config-meedsio": "^1.0.5",
     "eslint-plugin-vuejs-accessibility": "^2.4.1",
     "eslint-webpack-plugin": "^5.0.2",
     "style-loader": "^4.0.0",
