--- a/services/pom.xml
+++ b/services/pom.xml
@@ -147,6 +147,13 @@
             <version>3.51.2.0</version>
             <scope>compile</scope>
         </dependency>
+        <!-- Source: https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.51.1.1</version>
+            <scope>compile</scope>
+        </dependency>
 
         <!-- Allre junit -->
         <dependency>
