--- a/services/pom.xml
+++ b/services/pom.xml
@@ -49,6 +49,13 @@
             <artifactId>exo.kernel.commons</artifactId>
             <version>7.0.0-exo-M24</version>
         </dependency>
+
+        <dependency>
+            <groupId>io.swagger.core.v3</groupId>
+            <artifactId>swagger-jaxrs2</artifactId>
+            <version>2.2.15</version>            <!-- Utilise la dernière version stable -->
+        </dependency>
+
         <dependency>
             <groupId>org.exoplatform.kernel</groupId>
             <artifactId>exo.kernel.container</artifactId>
